# Tarlog

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  docker-compose.image.yml  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.codex-audit/backdating-workflow/: audit.md
.github/workflows/: ci.yml  release.yml
.playwright-cli/: page-2026-07-18T11-51-47-414Z.yml
apps/desktop/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  macos.css  main.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: README.md  icon.icns
apps/desktop/src-tauri/src/: commands.rs  db.rs  l10n.rs  lib.rs  main.rs  menu.rs  native_timer.rs  shortcuts.rs  sync_http.rs  system_symbols.rs  tray.rs  window_chrome.rs
apps/desktop/src-tauri/tests/: local_mode.rs  schema_migrations.rs
apps/mobile/: app.json  babel.config.js  expo-env.d.ts  index.ts  metro.config.js  package.json  tsconfig.json
apps/mobile/app/: _layout.tsx
apps/web/: .env.example  .gitignore  Dockerfile  README.md  middleware.ts  next.config.ts  package.json  postcss.config.mjs  server.mjs  tsconfig.json  vitest.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/lib/: api.test.ts  api.ts  db.ts  events.ts  session.test.ts  session.ts  version.test.ts  version.ts
apps/web/scripts/: entrypoint.sh  (+2 more)
assets/brand/: README.md
docs/: apple-redesign-2026.md
docs/project-time-ledger/: 01-recherche.md  02-produkt.md  03-zeiterfassung.md  04-sync.md  05-architektur.md  06-datenmodell.md  07-zeitberechnung-rundung.md  08-compliance.md  09-datenschutz-sicherheit.md  10-abrechnung-export.md  11-ui-apps.md  12-qualitaet.md  README.md
scripts/: smoke.sh  verify-version.mjs
(+278 files in other folders)
